feat(toast): implement comeplte toast notification system v1.0.0

--- a/packages/toast/package.json
+++ b/packages/toast/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@arxdn/toast",
-  "version": "0.0.1",
-  "private": true,
+  "version": "1.0.0",
+  "private": false,
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
@@ -11,6 +11,9 @@
       "import": "./dist/index.mjs",
       "require": "./dist/index.js"
     }
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "files": [
     "dist"
