--- a/shared/package.json
+++ b/shared/package.json
@@ -1,7 +1,22 @@
 {
   "name": "@arxdn/shared",
-  "version": "0.0.1",
-  "private": true,
+  "version": "1.0.1",
+  "description": "Shared utilities library for ARXDN projects",
+  "private": false,
+  "author": "Armando Rios",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/arxdn/library-js.git",
+    "directory": "shared"
+  },
+  "keywords": [
+    "utilities",
+    "shared",
+    "javascript",
+    "typescript",
+    "id-generator"
+  ],
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
@@ -11,6 +26,9 @@
       "import": "./dist/index.mjs",
       "require": "./dist/index.js"
     }
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "files": [
     "dist"
