--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,15 +1,9 @@
 {
   "name": "@arxdn/shared",
+  "private": true,
   "version": "1.0.1",
-  "description": "Shared utilities library for ARXDN projects",
-  "private": false,
   "author": "Armando Rios",
   "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/arxdn/library-js.git",
-    "directory": "shared"
-  },
   "keywords": [
     "utilities",
     "shared",
@@ -26,9 +20,6 @@
       "import": "./dist/index.mjs",
       "require": "./dist/index.js"
     }
-  },
-  "publishConfig": {
-    "access": "public"
   },
   "files": [
     "dist"
