--- a/packages/toast/package.json
+++ b/packages/toast/package.json
@@ -28,7 +28,8 @@
     }
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "provenance": true
   },
   "files": [
     "dist"
@@ -40,10 +41,8 @@
     "test": "vitest",
     "test:run": "vitest run"
   },
-  "dependencies": {
-    "@arxdn/shared": "*"
-  },
   "devDependencies": {
+    "@arxdn/shared": "*",
     "@types/node": "^22.10.6",
     "tsup": "^8.4.0",
     "typescript": "^5.7.3",
