--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,17 +1,13 @@
 name: Release
-
 on:
   push:
     branches:
       - main
-
 concurrency: ${{ github.workflow }}-${{ github.ref }}
-
 permissions:
   contents: write
   pull-requests: write
   id-token: write
-
 jobs:
   release:
     name: Release
@@ -19,19 +15,15 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
-
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '22'
           registry-url: 'https://registry.npmjs.org/'
-
       - name: Install Dependencies
         run: npm install
-      
       - name: Build Packages
         run: npm run build
-
       - name: Create Release Pull Request or Publish to NPM
         id: changesets
         uses: changesets/action@v1
@@ -39,3 +31,4 @@ jobs:
           publish: npx changeset publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
