fix(docs): add Vercel rewrites for /libraries base path

--- a/sites/docs/vercel.json
+++ b/sites/docs/vercel.json
@@ -1,4 +1,14 @@
 {
+  "rewrites": [
+    {
+      "source": "/libraries",
+      "destination": "/index.html"
+    },
+    {
+      "source": "/libraries/:path*",
+      "destination": "/:path*"
+    }
+  ],
   "redirects": [
     {
       "source": "/",
