--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,6 +3,9 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'packages/**'
+      - '.changeset/**'
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 permissions:
   contents: write
@@ -23,7 +26,7 @@ jobs:
       - name: Install Dependencies
         run: npm install
       - name: Build Packages
-        run: npm run build
+        run: npm run build -w packages/shared -w packages/toast
       - name: Create Release Pull Request or Publish to NPM
         id: changesets
         uses: changesets/action@v1
